<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        style="@style/Widget.Material3.BottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:menu="@menu/bottom_navigation_menu" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="649dp"
        android:paddingStart="@dimen/common_spacing"
        android:paddingTop="@dimen/common_spacing"
        android:paddingEnd="@dimen/common_spacing"
        tools:context=".activity.FeedFragment">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/bottom_save"
            style="@style/Widget.Material3.FloatingActionButton.Surface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/refresh"
            app:srcCompat="@drawable/add_icon_2" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="536dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/refresh"
            app:layout_constraintEnd_toEndOf="@+id/refresh"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></ProgressBar>

        <TextView
            android:id="@+id/empty_posts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_posts"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></TextView>

        <LinearLayout
            android:id="@+id/error_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/error_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/network_error"></TextView>
        </LinearLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="11dp">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/fragment_post_card" />


        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top">

        <Button
            android:id="@+id/button_new_posts"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="5dp"
            android:alpha="@integer/material_motion_duration_long_1"
            android:backgroundTint="@color/my_app_primary_inverse"
            android:gravity="right|center"
            android:text="@string/new_posts"
            android:visibility="gone"></Button>

        <ImageView
            android:id="@+id/button_top"
            android:layout_width="25dp"
            android:layout_height="32dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="13dp"
            android:src="@drawable/top_icon"
            android:visibility="gone"
            app:tint="@color/cardview_light_background"></ImageView>

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>